--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
     "datenv": "^0.0.0",
     "fastify": "^4.26.2",
     "nodemon": "^3.1.0",
