--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
-    "datenv": "^0.0.0",
+    "dotenv": "^16.4.5",
     "fastify": "^4.26.2",
     "nodemon": "^3.1.0",
     "pg": "^8.11.3"
